# qt-json

./: .gitignore  .qmake.conf  README.md  conanfile.py  qt-json.pri  qt-json.pro  qtjson.cpp  qtjson.h  qtjson_global.h
.github/workflows/: build.yml
demo/: demo.pro  demogadget.cpp  demogadget.h  main.cpp
lib/: lib.pro
src/: CMakeLists.txt  configuration.h  iserializable.cpp  iserializable.h  iserializablewrapperfactory.cpp  iserializablewrapperfactory.h  qt-json.h  qtjson.cpp  qtjson.h  qtjson_common.cpp  qtjson_common_p.h  qtjson_exception.cpp  qtjson_exception.h  qtjson_global.h  qtjson_helpers.cpp  qtjson_helpers.h  qtjson_metamacros.h  qtjson_p.h  serializableadapter.h  serializablearray.h  serializablearray_p.h  serializablebytearray.cpp  serializablebytearray.h  serializabledatetime.cpp  serializabledatetime.h  serializabledictionary.cpp  serializabledictionary.h  serializabledictionary_p.h  serializablegadget.cpp  serializablegadget.h  serializablegadget_p.h  serializablelist.cpp  serializablelist.h  serializableoptional.h  serializableversionnumber.cpp  serializableversionnumber.h  serializablewrapper.cpp  serializablewrapper.h  serializationadapter.cpp  serializationadapter.h  (+1 more)
test_package/: conanfile.py
tests/: tests.pri  tests.pro
tests/AdapterTest/: AdapterTest.pro  tst_adapter.cpp
tests/ArrayTest/: ArrayTest.pro  tst_array.cpp
tests/ByteArrayTest/: ByteArrayTest.pro  tst_bytearray.cpp
tests/DateTimeTest/: DateTimeTest.pro  tst_datetime.cpp
tests/DictionaryTest/: DictionaryTest.pro  tst_dictionary.cpp
tests/GadgetTest/: GadgetTest.pro  testgadget.cpp  testgadget.h  tst_gadget.cpp
tests/OptionalTest/: OptionalTest.pro  tst_optional.cpp
tests/SerializableAdapterTest/: SerializableAdapterTest.pro  tst_serializableadapter.cpp
tests/VersionNumberTest/: VersionNumberTest.pro  tst_versionnumber.cpp
tests/testlib/: serializationtest.cpp  serializationtest.h  testlib.cpp  (+4 more)
